--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "jspm": {
     "format": "global",
     "shim": {
-      "dist/js/html5-sortable": ["jquery"]
+      "dist/js/html5-sortable": [
+        "jquery"
+      ]
     }
   },
   "homepage": "https://github.com/clippings/html5-sortable",
@@ -34,6 +36,7 @@
     "grunt-jscs": "~1.8.0",
     "grunt-qunit-istanbul": "^0.5.0",
     "grunt-sass": "^1.0.0",
+    "grunt-submake": "^0.2.0",
     "load-grunt-tasks": "^3.2.0",
     "qunitjs": "^1.19.0"
   }
