Namespace the package in npm, as there is already one

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html5-sortable",
+  "name": "clippings-html5-sortable",
   "license": "BSD-3-Clause",
   "version": "1.0.0",
   "dependencies": {
